# ic

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  test_training_progress.py
src/: __init__.py  main.py
src/core/: __init__.py  classifier.py  image_manager.py  rating_manager.py  training_worker.py
src/gui/: __init__.py  crop_widget.py  image_viewer.py  main_window.py  rating_panel.py  training_progress_dialog.py  viewing_window.py
src/utils/: __init__.py  file_utils.py  image_utils.py  ml_utils.py  single_instance.py
